revised plots in Gaussian diagnostics and trimming in sobol section

--- a/FJH23.bib
+++ b/FJH23.bib
@@ -8236,3 +8236,9 @@
 	note={\url{http://www.deeplearningbook.org}},
 	year={2016}
 }
+
+@phdthesis{JagThesis19a,
+	Author = {Jagadeeswaran Rathinavel},
+	School = {Illinois Institute of Technology},
+	Title = {Fast automatic {B}ayesian cubature using matching kernels and designs},
+	Year = {2019}}
